namespace Backend
{
    public class UserAttempt
    {
        public string? AttemptId { get; set; }
        public string? ExamId { get; set; }
        public string? QuestionId { get; set; }
        public string? AnswerId { get; set; }

    }
}
