namespace Backend.Models
{
    public class ExamKeywords
    {
        public string? KeywordId { get; set; }
        public string? ExamId { get; set; }
    }
}
