namespace Backend
{
    public class Keyword
    {
        public string? KeywordId { get; set; }
        public string? KeywordText { get; set; }
    }
}