namespace Backend
{
    public class QuestionKeywords
    {
        public string? QuestionId { get; set; }
        public string? KeywordId { get; set; }
    }
}