namespace Backend
{
    public class Answer
    {
        public string? AnswerId { get; set; }
        public string? QuestionId { get; set; }
        public string? AnswerText { get; set; }
        public string? IsCorrect { get; set; }
    }
}
