namespace Backend
{
    public class ExamQuestions
    {
        public string? ExamId { get; set; }
        public string? QuestionId { get; set; }
    }
}
