namespace Backend
{
    public class UserAttemptDetails
    {
        public string? AttemptId { get; set; }
        public string? UserId { get; set; }
        public string? AttemptStart { get; set; }
        public string? AttemptEnd { get; set; }
    }
}
